solve flexbox wrap bug

--- a/src/client/scss/documents/DocumentsNewEditorView.scss
+++ b/src/client/scss/documents/DocumentsNewEditorView.scss
@@ -1,10 +1,12 @@
 .DocumentsNewEditorView {
   @include display(flex);
-  @include flex-flow(column wrap);
+  @include flex-flow(column);
   &-header {
     @include display(flex);
     @include justify-content(space-between);
     @include align-items(center);
+    // Makes sure the header doesn't shrink, not 0 by default for some reason
+    @include flex-shrink(0);
     &-title {
       color: $text-color-light;
       font-size: 18px;
@@ -17,16 +19,15 @@
     }
   }
   &-content {
+    min-height: 100px;
+    position: relative;
     @include flex-grow(1);
     @include display(flex);
-    position: relative;
     &-preview {
       @include flex-grow(5);
-      overflow-y: auto;
     }
     &-sidebar {
       @include flex-grow(4);
-      overflow-y: auto;
     }
   }
 }
