--- a/src/client/scss/shared/DocumentPreviewCard.scss
+++ b/src/client/scss/shared/DocumentPreviewCard.scss
@@ -1,8 +1,6 @@
-
-
 .DocumentPreviewCard {
   @include display(flex);
-  @include flex-flow(column wrap);
+  @include flex-flow(column);
   &-header {
     @include display(flex);
     @include justify-content(space-between);
