--- a/src/client/scss/shared/FormSidebarBody.scss
+++ b/src/client/scss/shared/FormSidebarBody.scss
@@ -1,7 +1,8 @@
 .FormSidebarBody {
   @include display(flex);
-  @include flex-flow(column wrap);
+  @include flex-direction(column);
   @include flex-grow(1);
-  height: 100px;
+  @include flex-shrink(2);
+  width: 100%;
   overflow-y: scroll;
 }
