--- a/src/client/scss/shared/FormSidebarSection.scss
+++ b/src/client/scss/shared/FormSidebarSection.scss
@@ -1,4 +1,4 @@
 .FormSidebarSection {
-  display: block;
   padding: 8px 0;
+  width: 100%;
 }
